<resources>
    <string name="app_name">Better Best</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="role">我的生活里我是主角</string>
    <string name="changes">要想改变世界，首先改变自己</string>
    <string name="fights">战胜自己，跟自己死磕到底</string>
    <string name="think">不要把生命浪费在思考别人上</string>
    <string name="one">特立独行，做独一无二的你</string>

    <string name="role_tip">你已经是主角了哟！</string>
    <string name="change_tip">来吧！改变自己吧！</string>
    <string name="fight_tip">别让自己偷懒哟！</string>
    <string name="think_tip">是时候来思考思考自己了！</string>
    <string name="one_tip">保持自我，你能行！</string>

    <string name="this_is_me">

        "小君是我的大学同学。毕业后，踏进金融圈，痴迷于股票研究，零基础开始，读了大量财经方面的专著，"
        "上培训班，跑证券市场，研究K线图，发表了很多关于股票研究的文章，在网上积累了不少粉丝，"
        "短短一年时间在圈里已经算小有名气。\n\n"

        "很多朋友，同学都知道他的名号，找他推荐股票。并且大家跟着他的指导，"
        "赚了不少钱。他在这过程中也找到了自己的价值，俨然成了专家。\n\n"

        "一传十，十传百，很多人对他都到了顶礼膜拜的地步，私下都称他股神。他飘飘然。\n\n"

        "毕竟在这圈里混的时间短，在他号召大家积极买进的时候，股市去杠杆，急转直下，"
        "他也没有意识到危机，仍然号召抄底。\n\n"

        "最终，庞大的粉丝群亏损严重，网上骂声一片。讨伐他的负面文章一篇接一篇。"
        "小君受不了压力，封了所有网络账号，从证券公司辞职，发誓不再研究股票。\n\n"

    </string>

    <string name="tag_this">
        "我们在提升自己的过程中，难免会遇到很多挫折，这些挫折大多来自外界的评价，"
        "谩骂，或者嘲讽，因为这些，我们改变我们的初衷，放弃自己很久的积累，寻找他路，"
        "必然需要重新开始。\n\n"

        "成长为出类拔萃都不是一帆风顺的，我们是自己命运的主人，是自己灵魂的舵手，"
        "风浪再大，不忘初心，要做生活的主角，对别人的评价要去其糟粕，吸收教训，勇敢前行。"
    </string>

    <string name="change_myself">

        "有一次去听时间管理的课程，一个女孩向老师提问：“我现在上下班坐公交车路上要花费2个小时，"
        "我想利用这两个小时阅读，车子摇晃，人也多，无法专心。考虑自己开车节省时间，可是嫌累。"
        "也不能搬家，而且我很喜欢目前的工作，不愿离职，我怎么才能省下这两个小时呢?”\n\n"

        "老师说：“时间管理首先就是要知道哪些是可控的，哪些是不可控的。公交车上环境不可控，"
        "那可控的就是搬家或换工作。”\n\n"

        "女孩说：“可我不想搬家，也不愿换工作啊！”\n\n"

        "老师说：“那你可以试着少睡两个小时，好好利用这段时间，然后车上补觉。”\n\n"

        "女孩又说：“我已经习惯了睡眠时间，改变过来会不习惯。”\n\n"

        "老师无奈的说：“所有的可控性都不愿改变，那只能照旧了。”"

    </string>

    <string name="change">

        "我们从孩提时期到成人，一直都处在改变中，没有那个人能用儿童时期获得的经验生活到现在。"
        "唯有一种人可以，就是先天智障。在改变中有些人越来越卓越，有些人越来越普通。"
        "所以改变自己旧有的习惯，遇见未来更好的那个自己是最紧要的。"

    </string>
    
    <string name="fight_self">

        "这一点是所有从普通到优秀里最核心的一点，包含两层意思，一是虐心，二是坚持。\n\n"

        "战胜普通的自己，战胜的是什么？懒惰，舒适，安逸，和局限。\n\n"

        "人都有惰性，喜欢舒适，安逸。同时人又有理性思考，在追求优秀的道路上，"
        "必然是勤奋与惰性的较量，所以当你想懒惰的时候，记住温水里的青蛙早晚会熟的。"
        "你不勤奋怎么比别人强。\n\n"

        "而战胜自己最困难的是战胜自己的局限。我妈妈是个朴实的农民，家里条件不好，"
        "生活一直很拮据。考上大学后，我想买台电脑。她就从存折上取了5000块，"
        "陪我一起到科技市场选笔记本电脑。转了半天，看了很多。价格从2000多的到上万的都有。"
        "我知道家里困难，妈妈身上钱也不多，就要求买2000多的。\n\n"

        "最后妈妈给我买了4999的笔记本。我心里在滴血。虽然抱着梦寐以求的电脑，"
        "但是高兴不起来。妈妈看出我的不悦。她告诉我：在我们条件允许的情况下，就要买最贵的。\n\n"

        "虽然她没有告诉我其中的道理，但是那台电脑的确陪伴我了好多年，到现在虽然配置有点落后，"
        "但是始终没有什么毛病出现。这就是战胜没钱时候的局限。"

    </string>

    <string name="fight">

        "在做选择，或者决策的时候，抑或在做某件事件的时候，你的决定最好是虐心的。"
        "为什么会虐心，因为你还很普通，思维是有局限的。就像某场自己什么都不会的考试，AB项，"
        "选择自己认为不像答案的那个，往往正确率会高一点。\n\n"

        "我们之所以普通，就是因为随了自己。只有通过不断的坚持，将虐心的状态变成了舒适，"
        "习惯了，那么你就优秀了，不再普通。坚持早起写作，坚持定时学英语，起初都不会太顺你的意。"

    </string>

    <string name="stop_think_anybody">

        "诸如现在的手机，总有很多人，早上醒来第一件事就是打开手机朋友圈，"
        "看别人发了什么动态，昨晚吃了什么大餐，某某去了什么地方游玩。"
        "工作时还不忘随时注意手机的声响，总怕错过了什么。"
        "窥探别人的生活成了自己的日常必修课。\n\n"

        "我很少发现真正优秀的人会整天八卦别人的生活。大多精力都是关注自己，"
        "审视自己每日所得，既使手机不离手，也是在用手机阅读自己感兴趣的电子书，"
        "或者在码自己的文章。同样是在玩手机，有些已经利用手机写出了自己的第一本书，"
        "而有些人，呵呵……"

    </string>

    <string name="stop">

        "世界上没有两片完全一样的树叶，也没有两个完全一样的人生。如果一个人总是在思考别人，"
        "那他肯定没有多少时间来思考自己的问题。"

    </string>

    <string name="one_of_yourself">

        "要记住你是这个世界的奇迹，你有上天赋予你的独特天赋。如果你说没有，"
        "那只是你还没有发现。不必要浪费太多的精力在模仿他人身上，"
        "而忽视了如何利用自己身上的潜能。\n\n"

        "任何重大成果都是由特立独行的性格造就而成的，想想苹果教父乔布斯，"
        "如果你想成为这样的人，你必须明白一点，与别人过分一致，是无法取得真正的成功的。\n\n"

        "多数人都力图和周围人保持一致，而不愿意从普通人中脱颖而出。"
        "因为枪打出头鸟的局限始终纠缠着你的内心，让你不愿做出改变，"
        "抑或从众心理让你成为泛泛之辈，对外界没有丝毫影响。"

    </string>

    <string name="oneself">

        "运用你的技能，同时保持自我，展现出你的独特性，"
        "那么就能创造出属于你的成绩，与众不同。"

    </string>

    <string name="author">

        文／铁眼（简书作者）
        原文链接：http://www.jianshu.com/p/578356e7765e
        著作权归作者所有，转载请联系作者获得授权，并标注“简书作者”。

    </string>
</resources>
