<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorIconsText"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/space_4"
        android:scrollbarStyle="outsideOverlay">

        <android.support.v7.widget.CardView
            android:id="@+id/this_is_me"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_200"
            android:layout_marginBottom="@dimen/space_4"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    style="@style/commone_image_style"
                    android:src="@drawable/this_is_me"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_30"
                    android:layout_alignParentBottom="true"
                    android:background="@color/black_transparent"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:padding="@dimen/space_5"
                    android:text="@string/role"
                    android:textColor="@color/colorIconsText"
                    android:textSize="12sp"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_175"
            android:layout_marginBottom="@dimen/space_4"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/change_self"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/space_2"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/commone_image_style"
                        android:src="@drawable/change_my_self"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_30"
                        android:layout_alignParentBottom="true"
                        android:background="@color/black_transparent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:padding="@dimen/space_5"
                        android:text="@string/changes"
                        android:textColor="@color/colorIconsText"
                        android:textSize="12sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/fight_self"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/commone_image_style"
                        android:src="@drawable/fight_with_myself"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_30"
                        android:layout_alignParentBottom="true"
                        android:background="@color/black_transparent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:padding="@dimen/space_5"
                        android:text="@string/fights"
                        android:textColor="@color/colorIconsText"
                        android:textSize="12sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_175"
            android:layout_marginBottom="@dimen/space_4"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/stop_thinking"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/space_2"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/commone_image_style"
                        android:src="@drawable/stop_thinking_anybody"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_30"
                        android:layout_alignParentBottom="true"
                        android:background="@color/black_transparent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:padding="@dimen/space_5"
                        android:text="@string/think"
                        android:textColor="@color/colorIconsText"
                        android:textSize="12sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/one_of_self"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        style="@style/commone_image_style"
                        android:src="@drawable/one_of_me"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_30"
                        android:layout_alignParentBottom="true"
                        android:background="@color/black_transparent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:padding="@dimen/space_5"
                        android:text="@string/one"
                        android:textColor="@color/colorIconsText"
                        android:textSize="12sp"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
